--- a/website/index.html
+++ b/website/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="cache-control" content="max-age=0" />
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+    <meta http-equiv="pragma" content="no-cache" />
+
+    <link href="https://fonts.googleapis.com/css?family=PT+Mono" rel="stylesheet" />
+
     <title>
         Boğaziçi DataCamp
     </title>
+
     <meta charset="UTF-8">
 
     <style>
@@ -12,8 +24,8 @@
             padding: 0;
         }
         section{
-            background: #0C0C0C;
-            color: white;
+            background: #00836E;
+            color: #E2FFFA;
             padding: 20px;
         }
         body{
@@ -42,6 +54,12 @@
             left: 0;
             z-index: -1;
         }
+        section h2{
+            letter-spacing: 2px;
+        }
+        section p{
+            line-height: 1.2em;
+        }
         header{
             width: 100%;
             height: 100vh;
@@ -53,14 +71,14 @@
             text-align: center;
         }
         .header-logo{
-            width: 50%;
+            width: 60%;
             margin-top: 80px;
         }
         .header-logo img{
             width: 100%;
         }
         .header-detail-text{
-            padding: 0 10px;
+            padding: 20px 20px;
             font-size: 18px;
             letter-spacing: 1px;
             line-height: 1.2em;
@@ -95,7 +113,7 @@
     <header id="hero">
         <div class="header-content" id="animation">
             <canvas id="c"></canvas>
-            <img class="header-logo" src="assets/logo.png">
+            <img class="header-logo" src="assets/logo_dark_big.png">
             <div class="header-detail-text">
                 <p>17-18 Kasım'da Boğaziçi Üniversitesi Bilişim Kulübü Compec tarafından bu yıl ilk defa düzenlenecek olan Boğaziçi DataCamp'e sen de davetlisin.</p>
                 <p>İki gün boyunca konuşmalarla sektörü "Data Science" açısından teknik olarak tanıyacak ve workshoplarla doğrudan uygulayarak öğrenme fırsatı yakalayacaksın.</p>
@@ -116,12 +134,6 @@
                 Boğaziçi DataCamp, «data science» alanının günümüzdeki uygulama alanlarının ve
                 geleceğinin tartışıldığı ve katılımcıların uygulayarak öğrenme şansı yakaladıkları iki günlük
                 bir zirvedir. Bu yıl ilk defa düzenlenecektir.
-            </p>
-            <p>
-                Etkinliğimiz hedef kitle olan Bilgisayar Mühendisliği ve diğer ilgili bölümlerden
-                öğrencilerin istekleri göz önünde bulundurularak tasarlanmaktadır. Etkinlik dahilinde
-                konuşmalar teknik anlamda ufuk açma ve iç görü kazandırma işlevi görürken
-                workshoplar uygulayarak öğrenme ve soru sorma imkanı sağlayacaktır.
             </p>
             <p>
                 Yer ve zaman
