--- a/website/index.html
+++ b/website/index.html
@@ -163,7 +163,7 @@
     </section>
     <section id="program">
         <h2>Program</h2>
-        Yakında açıklanacaktır
+        Yakında
     </section>
     <section id="partners"></section>
     <section id="contact">
