--- a/website/index.html
+++ b/website/index.html
@@ -9,7 +9,6 @@
     <meta http-equiv="expires" content="0" />
     <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
     <meta http-equiv="pragma" content="no-cache" />
-    <meta name="theme-color" content="#000000">
     <link rel="shortcut icon" type="image/png" href="/assets/logo_icon.png"/>
 
     <link href="https://fonts.googleapis.com/css?family=PT+Mono" rel="stylesheet" />
@@ -203,13 +202,30 @@
         .partners-container .cooperators .sponsor{
             width: 40%;
         }
+        .partners-container .cooperators2{
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+        }
+        .partners-container .cooperators2 .sponsor{
+            width: 18%;
+        }
         .register-container h3{
             text-align: center;
             line-height: 1.5em;
             letter-spacing: 1px;
             font-size: 1.4em;
         }
-        .register-container .register-btn{
+        .register-container .youtube-btn{
+            margin: 30px auto;
+            padding: 20px;
+            width: 200px;
+            background-color: red;
+            cursor: pointer;
+            border-radius: 12px;
+            text-align: center;
+        }
+        .register-container .instagram-btn{
             margin: 20px auto;
             padding: 20px;
             width: 200px;
@@ -217,12 +233,18 @@
             cursor: pointer;
             border-radius: 12px;
             text-align: center;
+            display:inline-block;
+            color: black;
         }
         .register-container a{
             text-decoration: none;
-            color: rgb(0,131,110);
+            color: rgb(255,255,255);
             font-weight: 700;
-            font-size: 1.2em;
+            font-size: 1.6em;
+        }
+        .instagram{
+            margin: auto;
+            text-align: center;
         }
         .team-member{
             display: flex;
@@ -478,7 +500,7 @@
                         <p>During the two-day summit, with talks, you will recognize the business applications of data science with a technical approach and practice them in workshops.</p>
                     </div>
                     <div class="btn">
-                        <a target="_blank" href="http://bit.ly/boundatacamp18">Get Your Ticket Free</a>
+                        <a data-scroll href="#register" class="nav-link">Get Your Ticket Free</a>
                     </div>
                 </div>
                 <div class="header-image">
@@ -1010,18 +1032,49 @@
                         </a>
                     </div>
                 </div>
+                <h3>Media Partners</h3>
+                <div class="cooperators2">
+                    <div class="sponsor">
+                        <a target="_blank" href="https://www.muhendisbeyinler.net/">
+                            <img src="assets/partners/instagram/muhbeyinler.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="sponsor">
+                        <a target="_blank" href="https://www.instagram.com/ceyrek.muhendis/">
+                            <img src="assets/partners/instagram/ceyrekmuh.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="sponsor">
+                        <a target="_blank" href="https://www.instagram.com/iamanengineerr/">
+                            <img src="assets/partners/instagram/iameng.jpg" alt="">
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
     <section id="register">
         <div class="container register-container">
-            <h3>Anticipate <br class="br-mobile"> The Challenge <br> & <br> Feel Like <br class="br-mobile"> a Data Scientist</h3>
-            <a target="_blank" href="http://bit.ly/boundatacamp18">
-                <div class="register-btn">
-                    Register Now
+            <h3>Unfortunately, <br class="br-mobile"> registrations are closed.</h3>
+            <p>You can subscribe to our youtube channel to follow <b>live streams</b> of the event:</p>
+            <a target="_blank" href="https://www.youtube.com/channel/UCNo7VY-ZXDgIGF0n2qlH66A">
+                <div class="youtube-btn">
+                    Youtube
                 </div>
             </a>
-            <p>* It is obligatory to fill the form before attending the summit. For workshops, another form will be sent to the registered attendees.</p>
+            <p>You can also follow DataCamp's and Compec's instagram pages:</p>
+            <div class="instagram">
+                <a target="_blank" href="https://www.instagram.com/boundatacamp/">
+                    <div class="instagram-btn">
+                        @boundatacamp
+                    </div>
+                </a>
+                <a target="_blank" href="https://www.instagram.com/bouncompec/">
+                    <div class="instagram-btn">
+                        @bouncompec
+                    </div>
+                </a>
+            </div>
         </div>
     </section>
     <section id="contact">
