--- a/website/index.html
+++ b/website/index.html
@@ -1096,13 +1096,13 @@
                 </div>
                 <div class="team-member">
                     <div class="image">
-                        <img src="assets/team/Berkay.png" alt="Berkay Bör">
+                        <img src="assets/team/cansu.jpeg" alt="Cansu Kocabaş">
                     </div>
                     <div class="text">
-                        <strong>Berkay Bör</strong> <br>
+                        <strong>Cansu Kocabaş</strong> <br>
                         <em>Compec Dev-Team Leader</em> <br>
-                        <a href="mailto:berkay.bor07@gmail.com" target="_top">berkay.bor07@gmail.com</a> <br>
-                        <a href="tel:+905309650606" target="_top">+90 530 965 06 06</a>
+                        <a href="mailto:cansu.kocabas@leader.compec.org" target="_top">cansu.kocabas@leader.compec.org</a> <br>
+                        <a href="tel:+905559939410" target="_top">+90 530 965 06 06</a>
                     </div>
                 </div>
                 <div class="team-member">
