az daha ittirdim

--- a/website/index.html
+++ b/website/index.html
@@ -489,7 +489,7 @@
             <div><a data-scroll href="#partners" class="nav-link">Partners</a></div>
             <div><a data-scroll href="#register" class="nav-link">Register</a></div>
             <div><a data-scroll href="#contact" class="nav-link">Contact Us</a></div>
-            <div><a  href="/index-2018.html" class="nav-link">DataCamp'18</a></div>
+            <div><a data-scroll  href="/index-2018.html" class="nav-link">DataCamp'18</a></div>
 
         </div>
     </nav>
