--- a/website/index.html
+++ b/website/index.html
@@ -808,7 +808,7 @@
     </section>
     <section id="register">
         <div class="container register-container">
-            <h3>Unfortunately, <br class="br-mobile"> registrations are closed.</h3>
+           <h1 style="text-align: center; font-size:30px;">Registeration form will be here soon!!! <br class="br-mobile"> </h1>
             <p>You can subscribe to our youtube channel to follow <b>live streams</b> of the event:</p>
             <a target="_blank" href="https://www.youtube.com/channel/UCNo7VY-ZXDgIGF0n2qlH66A">
                 <div class="youtube-btn">
