--- a/website/index.html
+++ b/website/index.html
@@ -276,7 +276,7 @@
             color: white;
         }
         .map-container{
-            display: block
+            display: block;
             height: 400px;
             width: 100%;
         }
