--- a/website/index.html
+++ b/website/index.html
@@ -505,9 +505,9 @@
                         <p>During the summit, with talks, you will recognize the business applications of data science with a technical approach and practice them in workshops.</p>
                     </div>
                     <div>
-                        <h1>Summit Countdown to November 24, 2019</h1>
+                        <h1>Countdown to Summit</h1>
                         <h1 id="countdownTimer"></h1>
-
+                        <h1>Date of summit:  November 24, 2019</h1>
                     </div>
                     <div class="btn">
                         <a data-scroll href="#register" class="nav-link">Wait for Registration</a>
