add photos of last year

--- a/index.html
+++ b/index.html
@@ -562,6 +562,94 @@
         </div>
 
     </section>
+<section id="gallery">
+    <div class="container-wide">
+        <h2>Gallery of DataCamp '18</h2>
+    </div>
+    <div class="container ">
+        <script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
+        <div class="pa-carousel-widget" style="width:100%; height:480px; display:none;"
+            data-link="https://photos.app.goo.gl/zhGfzNVU1fBvjAuW7" data-title=""
+            data-description="37 new photos added to shared album" data-delay="2" data-background-color="transparent">
+            <object
+                data="https://lh3.googleusercontent.com/aDiGv4OQt-Uzq3WL_U8MwrRIez52oeeyPh36ST9bg0EtAPYHbLFj2yAcjqZLXUFZtvbxVfETwNHqNlCeW6a_Y5VAJku_wsULa85vuBrsUEC-cHD9j-sEidkzy-cqK_xVnWqpscTRiw=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/01pB1SH6S_hz1xTXIZ0tsqWtjytWw27Vu0_B44lZnmc1FWd_bw2POR_K-nOwcbOcOac9nCwSdUY10nogLjOMCxGx0QLdPqoBXY5BD2c2FqoGHPezQDE0uo9f0MfVkWhYANGGF78KDg=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/g3S888-5zSxHSneP5cIh7N_FmIAre8FaAqaYkzYdG20AlXYn07lqaxY8y5__rg-sLlkreoHrcK9iZDjpRNeS4gkQMkrVoBh4UXOnc2MBC3E_kWQxSJcwKpQSnOtHV3ahfZINmPvVEA=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/QdkA84dObCcbnvu9bm8xNkwv7pn5Pt3W-Owhc_AFm8fc7PBxurySmwoZ_1mLkOsxp5tDZ_unjmCUmujhzOKHnRdabhbPVVCeb_fVCpEMkfLX5V66QY8ug7SCWbKK4-rGBgJcasye-A=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/_rwyBzMeH0JwcYMnLV0ZNWgYwRyRC74GiGB-deNTQOGJWRTbmsEtKBOhA5xK0PZTv9YRIuIpVXTnOweQ6K3ASjt4ttookBXMFj2conJVz5t9NL3lAv88pY1I6kXUh6nL1BhqIKkwCw=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/qfCDUlkVAQ7JFVDZS4rvJG4uiW-FA_m-TYDHHUCf9jlF-oxiMnf2XxA3Ip1RAMn4LTMI0xcIo6WOmilt-kiMpdWNxC9pyyhIlSB1b2vRmrrQwRLVsrKpoFxv22gKcPLK2I18WfsDyw=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/AH-fYF7UN64c5RBgjy2AlmqGpZCICvl7lDlYGC9EMjNA1XIP6cZiINA5uzoV7jRbJ7HB3-TpakKwVL_mwfxQ32IglMVUoRzs1vIBFl65-9ZIhDYf3-t_H5HR2txrcgO-_GIw-IZzoA=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/MtE-V-YH3Vb9s5JhTnT3OJbUDGjA15CmA5oRIcIEJ-Kt3vbKGbMrdlQnna1e4pgwprHzztCzqQqvWi12WxQF27R-XmCEsHbAuszMfh_ME2dt_pbSxhVmn9dW9OxlKWIPrjaUsvIp_g=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/JdFRHKx2sNGYXdssE5TTIFKxronCSBkPiPAtKTMO6DwPLMVOr1DNeZCeH31Qi08jcX3r3M2MM1h-7MFAGI9ZBAbqH8h7cYjc5PeokfkI4kyFqZ9Uz06hLZuZvKDCOgtXIkfPZHR3uA=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/Be5NEAbfOedjH-uM27KtyDuxRIaIPQBd3stn6HsFkOc43qt6OAoo30_q1DGMidLxceFoSdmAHvlZz1ffK5enyde4xjnG4pPY6cn-jerC-9o4V3Nz5Rj3X1oGG8pH6ipptrXZbmL26g=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/7jSwWlomiIrRu1DuFbDLD5w3Cg0_VsVNjhE6_yTDljreDX1f6rYF5e_1gXN-ViioK97WwITOpFwfeRgJy_JzYOU2dIy1TfM8Cizvu6VAvgJyuyR_F6_nF52Uttka2u8EyqN8HtPPjg=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/8NC07AyTAOikvrbpK5im9xBhCuCI_CXSt0sOVE4b2xIeBzmAvcsB73ISY0SqpahA--XuXvRFMQmwXrkhJb5F5bHSLAGmXZ1mdcdZDr_5jgCgl_TnQ1zFMXylyVWli-Fdig35nehDfw=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/4OBfO-PiWXyGjXx-tU2Z2g5feKxIiPE2ltsN1fkAIS1LcKWSwEXZ0Rkque1ueFMFzADqfhSKZi5Uai08F4eiER03VqCfoGUjB3ViSwpEiw85QabR0eWmS4u1H4B19Dsq1SNWLsYQfA=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/qM9Mtc81ALPBCMCkiaiXM9QdmJZ6HW89Odd3OLZMlVFIqEgr376iUzN5fU5BVAmFdHbRq3KqiFs6mG5DCJ5780_kFn9kmUsegJw5EbqdnKsW0ixUrj2bl3U5FOuqUA6nnajgDVy_OA=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/BfAaUaOosnbYclsR8Htiox7P_JbsU7cb6PvC8TDdCNdQcXYbbDyOFxYKzhdQo9fuNG7v9nZvzIGMYdMgC3jBi5OxEQI_kgJ5uM_GnEwtBNPay0X3YgcKf_jkzFxZWHJz_d544EoxMQ=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/_E0_PMcBiGacCRXkEf2sD7sMq_k9EnSv8lnt9RImcPH3jv8xb99R-oVwFml2rRn3hQQGvbrOqflp2UvzLz-IZx7m9NpxW4b95rEfx8ehVWZ99R_-zIKJCYQnPrInKt5LpUaDqYcKnA=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/ypkX8SoKYnsIo-8KbAxOR8NUGz1ugbxRt9w8DUWcLTqs5pSnstJRvX0Wicd5csb81WKCJV8syzTMRuQc4HeCm-AFnHah_gpIY_glupbGZvgWCnN3lmpH59VilBUsfcawBXpDE9MNCQ=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/YejhcAWyXzWyocU7H_vVxzUD3SBnpimRdo6EIs4FX1pHyHOR5bEXI8msk3k-4OO5t6r5hMo1dYephkqsXGLz-jNRoBZiw8xMeM4QoGdOjoySUSYNF3Hbzp6Mtxe9mKNZojKNGSKJAg=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/XDoQGrSg7pTRu14Gg3zxLV35tZPypAkxRxR-TYckBjNrDihdZgxLc1PWsPlZ5UZRbi0IWYBqcnSDNY2K_9VQYlFtPUyWI5ijaa9bV-ZRljXkoKc8hVWbj00h2DzU117XGJETES-5bg=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/-mmOMadou97oAPOeQW3NaDOlb5TauL51_E68cwnOVoF6I0cuAfgzEizn_QlnQu_bEqi5DaaeDG135Z1gfsOmvmvOJWThkXhg5Jn-jb1SjBnBgGrf8pgxXFzhpzm78JVpVXjco587yw=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/X3_KJ3PETOlZSMyz9CxzqXavim2omYzZenvaXdJ_kDyJGQl7zLvADVuHdgB4qDV2OlRXhPVTJSdVsmKVCwifveS5p35lEpTvRgsufXQ5LxAyWSfNe7rDjRS1gEPGjcqpilKUHqsEAA=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/ffwgdDRBfHXoCXLSsyWoPHdmCTPbT6ETz865_bBnRcsO5d_UYNzuktiw_wzyxPuQ44-OiiwhXOxAvNrIEaP8g4Knkw63drENX4VxWq8GWHkc9Sa-BBHQTu34ffRptzyzBpzBmo6Uxg=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/AtNaFzmgjgNpmlcdpJowSumBtKIzoXoIQdGoQ_IVPLZyBHU-mMuT7z7X9XH7YVn22RQim90VAbiozOkRg3zyDoQpKMivVUtMnZa3nU7_ASuzp0lr6jAszJPQQDyJ1C0v4ImOh1NziA=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/XEqSpSqvcDo__JTbtHk8e4rgsBJmFoy5UVwHazs7mTF9HPDNxcl47rw3HsN_qOJWfZHEe7gzIEWRo0pgZs2REfhVTQCt1OCRDsjTlOE9m41gTLbWOvSsQsfBmlE1JjtivJIuDp7z6w=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/M3-UF4CZoMzCSAwjnA29Ox0shPTgvmPW26A_ONxO7x9xtdZClSJAo57WkYxvUB3WTRKmvWvVdZQGwUUBm_PBVMcChH9g9sn6TVmQK_Pjm4-D7CGOg48RsGgGmmsU6rwh3d-b9m7KEQ=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/oP6Zl9cjjmt5sUvp9Tt4QObF3rSwYYxfgy4NnhBMHgfe5CZ4qyA7PBPFWLWd1-BABZmlmpRCBHSAzMpe3H9xqrRaUBpW2N27xDv1g2Z-riW2LlWLKwXBIKSTKYTmMy0HDUIXYLtyRQ=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/VzRez4qUNx3IpQZiESP_59tYLMKiIIWQXRANJmJqkxP42i0xiS2R8SUHEHIkBaYiGf1d5cTEHWI9ySItycQ1oMHvsndbvlvDlolT4W0y54cRVi-hAvzCi8XSDSn50hNJUMR704Z9Sw=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/fCjnNby1d-sPOPRoSoF9izMN-bii46gaZzqOg_gIFppmHW5rObnvEda1Zax01RMduo1DJkdVWW0VfYqElP37bKf4aPXc1bJXwffpLZX3MXRlyaFl4CnwP81f7kppnhLp_UG9Q2cIwg=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/04_mxWsv89BLLMkUJgHgcqnadBJJgZ1UI0mDdsFSTlrINDI5q1qyJ2r8PuuImh1WXXCrXK2i8dILHoOghBIlcYK8BxzZ45HTCAzcGkdQAvjTYDg5wi6mWlWlG3GESm6fymqrNwuHmw=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/RMyOWd3U4z_FR2iSatprW9mFWJYgIerdaEQL6--ETTpE6GM5IRWZMwPkM9fjgWuXsb6zKRNssOmKw5uXmfEi4uYA3_CQURoE3YggywnWArXYCrbCWLxJD9wVw9Xws8cAde-NXDwdQw=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/C2dcLRo1bGhkCc6Ha7zrRa7PU3NdT-nAaKzjkL19HHjEKmRv20dIgj1GdBGKhoMjQx9qJm4WOY2DAzZRmlmxKTRKN5CvjietFMrOt8no8iBF65y9wcH9lc2QoLZ4rPZo1Y8SQA4j0A=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/rcokuHSw_SneIpERm9diz8FJmQsSjqyITpINKwQAom-fMGo_wBqsIfe1kzHJfiJ-8sB2mRXsB7ZfY2T-G31RgPVYBkp7Key2zGYLkxJ1XIP3_xVuB-kqd1C5bnI9QXD3nuCy5BfCDg=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/9P0Qgry2ta4JQgTLtvcmBXbVcBfvQOQd9c83Rib_DEsthLYNUs2k9_DaRNisvn9OuiGC274R9JtygUxc-fGK-4f7CoVNyBW7i3xZB6pp88x-gGc2uEwz2WnV1pc7VvYpXcw3i5idgw=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/ZK3O3mH-8GohK-2604SEg0xy0i93uWRtxLiaUH8vsHwgNXxPXrobsU1J80duHXJNUexC8leYx4DOTwEUNVpFL58ljhfgQlMLr8Ym45rND09ubGw1omqKriimcuIZvDF9qhJ1xikY1A=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/ge8Xd2u62Z6Wz-93GBAJ8ySRr0kWPzxLKB9st7HC9u6C9w2aCBPhTNPfpKF0VJmh0ZSx8CxQHwAZ6rx7TvQYO1BQYAqzXAoW9-HOFCDTBvvRShUbfmVtzasVlNYhMOEDu1lDs0TZrQ=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/NzMyA21isoLuMuUs0Z2O9rfwb4tTvP4T6ToEQaDOHfKzmkEjpVn_mRhoWwiMLzaXwY9LR05lgGREhFxxV-ps_5Qdv0r6uKcspeycOuE_7lP6NRSSSiFOXjGPqBOHpT18ZSIfNYqu1A=w1920-h1080"></object>
+            <object
+                data="https://lh3.googleusercontent.com/IUx2et3nPFXCVqt9ZfpPVRFFvUx0IbduQ4oAaNljTCStuiNVOOOLNW_EviEnzoP32s6-JCFvaZU6YDWPLHH6cswgXgjIx0-cY3-5gXLGxu0z9WZLQFAAxN_HaFEElWuaqTYPRSLJhA=w1920-h1080"></object>
+        </div>
+
+    </div>
+</section>
+
     <section id="program">
         <div class="container container-wide">
             <h2>Program</h2>
@@ -804,9 +892,21 @@
     </section>
     <section id="partners">
         <div class="container">
-            <h2>Partners</h2>
+                <h2>Sponsors and Partners</h2>
             <div class="partners-container">
-                <a href="mailto:emin.deniz@compec.org?subject=Boğaziçi%20DataCamp%20Partnership&cc=salih.orhan@leader.compec.org;muge.kececi@leader.compec.org;cansu.kocabas@leader.compec.org"><h1>Contact Us To Be A Partner</h1></a>
+                   
+                <h3>Partner</h3>
+                    <div class="cooperators">
+                        <div class="sponsor">
+                            <a target="_blank" href="https://deeplearningturkiye.com/">
+                                <img src="assets/partners/deeptr.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <br>
+                <a href="mailto:emin.deniz@compec.org?subject=Boğaziçi%20DataCamp%20Partnership&cc=salih.orhan@leader.compec.org;muge.kececi@leader.compec.org;cansu.kocabas@leader.compec.org">
+                    <h1>Contact Us To Be A Sponsor</h1>
+                </a>
                 </div>
             </div>
         </div>
