--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <meta charset="UTF-8">
 
     <style>
-        
+        .mailFont{
+                font-size:11px;
+            }
         html, body{
             margin: 0;
             padding: 0;
@@ -376,6 +378,7 @@
                 display: block;
                 padding: 8px 16px;
             }
+            
             nav a{
                 text-decoration: none;
                 color: white;
@@ -505,9 +508,9 @@
                         <p>During the summit, with talks, you will recognize the business applications of data science with a technical approach and practice them in workshops.</p>
                     </div>
                     <div>
-                        <h1>Countdown to Summit</h1>
-                        <h1 id="countdownTimer"></h1>
-                        <h1>Date of summit:  November 24, 2019</h1>
+                        <h3>Countdown to Summit</h3>
+                        <h3 id="countdownTimer"></h3>
+                        <h3>Date of summit:  November 24, 2019</h3>
                     </div>
                     <div class="btn">
                         <a data-scroll href="#register" class="nav-link">Wait for Registration</a>
@@ -946,7 +949,7 @@
                     <div class="text">
                         <strong>Muhammed Emin Deniz</strong> <br>
                         <em>Compec R&D Director</em> <br>
-                        <a href="mailto:emin.deniz@compec.org" target="_top">emin.deniz@compec.org</a> <br>
+                        <a class="mailFont" href="mailto:emin.deniz@compec.org" target="_top">emin.deniz@compec.org</a> <br>
                         <a href="tel:+905364433684" target="_top">+90 536 443 36 84</a>
                     </div>
                 </div>
@@ -957,7 +960,7 @@
                     <div class="text">
                         <strong>Cansu Kocabaş</strong> <br>
                         <em>Compec Dev-Team Leader</em> <br>
-                        <a href="mailto:cansu.kocabas@leader.compec.org" target="_top">cansu.kocabas@leader.compec.org</a> <br>
+                        <a class="mailFont" href="mailto:cansu.kocabas@leader.compec.org" target="_top">cansu.kocabas@leader.compec.org</a> <br>
                         <a href="tel:+905559939410" target="_top">+90 530 965 06 06</a>
                     </div>
                 </div>
@@ -968,7 +971,7 @@
                     <div class="text">
                         <strong>Halil Salih Orhan</strong> <br>
                         <em>Compec Dev-Team Leader</em> <br>
-                        <a href="mailto:salih.orhan@leader.compec.org" target="_top">salih.orhan@leader.compec.org</a> <br>
+                        <a class="mailFont" href="mailto:salih.orhan@leader.compec.org" target="_top">salih.orhan@leader.compec.org</a> <br>
                         <a href="tel:+905316560971" target="_top">+90 531 656 09 71</a>
                     </div>
                 </div>
@@ -979,7 +982,7 @@
                     <div class="text">
                         <strong>Müge Keçeci</strong> <br>
                         <em>Compec Dev-Team Leader</em> <br>
-                        <a href="mailto:muge.kececi@leader.compec.org" target="_top">muge.kececi@leader.compec.org</a> <br>
+                        <a class="mailFont" href="mailto:muge.kececi@leader.compec.org" target="_top">muge.kececi@leader.compec.org</a> <br>
                         <a href="tel:+905071913564" target="_top">+90 507 191 35 64</a>
                     </div>
                 </div>
