add tawk.to chat widget delete fb chat widget

--- a/index.html
+++ b/index.html
@@ -459,26 +459,19 @@
     </script>
 </head>
 <body>
-
-    <!-- Load Facebook SDK for JavaScript -->
-    <div id="fb-root"></div>
-    <script>(function(d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s); js.id = id;
-        js.src = 'https://connect.facebook.net/tr_TR/sdk/xfbml.customerchat.js#xfbml=1&version=v2.12&autoLogAppEvents=1';
-        fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));</script>
-
-    <!-- Your customer chat code -->
-    <div class="fb-customerchat"
-         attribution=setup_tool
-         page_id="229779171220343"
-         theme_color="#67b868"
-         logged_in_greeting="Merhaba"
-         logged_out_greeting="Merhaba">
-    </div>
-
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+        (function () {
+            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/5d17819f7a48df6da2422b33/1dnaf35q7';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
+        })();
+    </script>
+    <!--End of Tawk.to Script-->
 
     <nav>
         <div class="logo-container">
@@ -1142,8 +1135,9 @@
         <!-- Ekip iletişim bilgileri-->
     </section>
     <section>
-        <div>
-            <form style="padding:3px;text-align:center;" action="https://tinyletter.com/bouncompec" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/bouncompec', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><label for="tlemail">Enter your email address</label></p><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /></form>
+        <div style="text-align:center;">
+            <h2>Subscribe our Mail List</h2>
+            <form style="padding:3px;" action="https://tinyletter.com/bouncompec" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/bouncompec', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><label for="tlemail">Enter your email address</label></p><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /></form>
         </div>
     </section>
     <section>
