--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
         </div>
     </section>
 
-<stage id="registerAll" style="display:unset">
+<stage id="registerAll" style="display:none">
 
     <section>
         <div class="container container-wide">
