--- a/index.html
+++ b/index.html
@@ -439,8 +439,8 @@
     </section>
     <section id="register">
         <div class="container container-wide register-container">
-           <h1 style="text-align: center; font-size:30px;">Kayıtlar çok yakında açılıyor!!! <br class="br-mobile"> </h1>
-            <p>Etkinliğimizin kayıtlarını beklerken bizi Sosyal medya hesaplarımızdan takip edebilirsin.</p>
+           <h1 style="text-align: center; font-size:30px;">Kayıtlar Açıldı!!! <br class="br-mobile"> </h1>
+            <p>Etkinliğimizi beklerken bizi Sosyal medya hesaplarımızdan takip edebilirsin.</p>
             <a target="_blank" href="https://www.youtube.com/channel/UCNo7VY-ZXDgIGF0n2qlH66A">
                 <div class="youtube-btn">
                     Youtube
