--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                             <h3 class="item-title">Kayıt & Çay İkramı</h3>
                         </div>
                     </div>
-                    <div class="program-item">
+                    <!-- <div class="program-item">
                         <div class="time">
                             <div>
                                     10<br>00
@@ -304,7 +304,7 @@
                             <h4 class="speaker-name">QNB FinansBank </h4>
                             <h4 class="speaker-title"> </h4>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="program-item">
                         <div class="time">
                             <div>
