--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                             <img src="/assets/partners/iot-lora-alliance-logo.svg_-300x300.png" style="background-color: #fff;" alt="">
                         </div>
                         <div class="text">
-                            <h3 class="item-title">LoRa</h3>
+                            <h3 class="item-title">Massive IoT</h3>
                             <h4 class="speaker-name">Alper Yeğin </h4>
                             <h4 class="speaker-title">Vice Chairman of LoRa Alliance </h4>
                         </div>
@@ -382,9 +382,9 @@
                             <img src="https://media.licdn.com/dms/image/C5603AQHFL5dKyxRejw/profile-displayphoto-shrink_200_200/0?e=1578528000&v=beta&t=oijAgTV7wg66gvghHf5N8UyVpvnuZepfpCvolkxt-6s" alt="" style="size: 70%;">
                         </div>
                         <div class="text">
-                            <h3 class="item-title">NLP</h3>
-                            <h4 class="speaker-name">Levent Arslan </h4>
-                            <h4 class="speaker-title">Founder & CEO at SESTEK</h4>
+                            <h3 class="item-title">Yapay Zeka ve Ses Teknolojileri</h3>
+                            <h4 class="speaker-name">Prof. Levent Arslan </h4>
+                            <h4 class="speaker-title">Founder & CEO - SESTEK</h4>
                         </div>
                     </div>
                     <div class="program-item">
@@ -405,7 +405,7 @@
                         <div class="text">
                             <h3 class="item-title">How to break into AI</h3>
                             <h4 class="speaker-name">Panel </h4>
-                            <!-- <h4 class="speaker-title">Panel </h4> -->
+                           
                         </div>
                     </div>
                     <div class="program-item">
